[package]
name = "rs-merkle-tree"
version = "0.1.0"
edition = "2021"

[lib]
name = "rs_merkle_tree"
path = "src/lib.rs"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"
temp-file = "0.1.9"

[[bench]]
name = "benchmarks"
harness = false

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
futures = "0.3"
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
sled = "0.34.7"
rusqlite = { version = "0.37", features = ["bundled"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
byteorder = "1.4"
thiserror = "2.0.16"
rocksdb = "0.24"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
light-poseidon = "0.4"
