[package]
name = "rs-merkle-tree"
version = "0.1.0"
edition = "2021"
resolver = "2"
description = "Merkle tree implementation in Rust with configurable storage backends and hash functions. Fixed depth and incremental only. Optimized for fast proof generation."
license = "MIT"
repository = "https://github.com/bilinearlabs/rs-merkle-tree"
homepage = "https://www.bilinearlabs.io"
readme = "README.md"
keywords = ["merkle", "proof", "tree"]
categories = ["cryptography", "data-structures"]
exclude = ["/target/*", "/.github/*", "/**/*.svg"]

[lib]
name = "rs_merkle_tree"
path = "src/lib.rs"

[features]
all = ["all_stores"]
default = ["memory_store"]
all_stores = ["memory_store", "sled_store", "sqlite_store", "rocksdb_store"]
memory_store = []
sled_store = ["dep:sled"]
sqlite_store = ["rusqlite/bundled"]
rocksdb_store = ["dep:rocksdb"]

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
mockall = "0.12"
proptest = "1.4"
test-case = "3.3"
temp-file = "0.1.9"

[[bench]]
name = "benchmarks"
harness = false
required-features = ["all"]

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.9.2"
futures = "0.3"
syn = { version = "1.0.107", features = ["full"] }
quote = "1.0.23"
tiny-keccak = { version = "2.0", features = ["keccak"] }
byteorder = "1.4"
thiserror = "2.0.16"
ark-bn254 = "0.5.0"
ark-ff = "0.5.0"
light-poseidon = "0.4"

# Conditional dependencies based on features
sled = { version = "0.34.7", optional = true }
rusqlite = { version = "0.37", features = ["bundled"], optional = true }
rocksdb = { version = "0.24", optional = true }
